<resources>
    <string name="app_name">Present Delivery Tracker App</string>
    <string name="mainTitle">Welcome Buddy</string>
    <string name="mainSubtitle">Track Your Elves Progress</string>
    <string name="addButton">Add Presents</string>
    <string name="gift">Gift</string>
    <string name="coal">Coal</string>
    <string name="amount">Number of Presents : </string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="reportTitle">Present Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_main">Add Delivery</string>
    <string name="action_report">Report</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">Present Delivery Tracker</string>
    <string name="nav_header_subtitle">themaninred@northpole.com</string>
    <string name="nav_header_desc">Navigation Header Image</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">Santa\'s Sick on Xmas Eve!</string>
    <string name="aboutus_message">Hi, I\'m Buddy the Elf. \n\nSanta Claus has Food Poisoning from some bad Snowberries.\n\n We gotta delivery the presents for him!!\n\nTrack the presents as you put them under the Tree!!</string>

    <string name="presentsNotFound">No Presents Yet…\nHop in the Sleigh!</string>
    <string name="addError">Error : Couldn\'t Add to Present Count…</string>
    <string name="Details">Details</string>

    <string name="amt">Amount :</string>
    <string name="type">Type :</string>
    <string name="message_on_card">Message :</string>
    <string name="pats">Pats on the Back :</string>

    <string name="messageLoading">Please Wait while the Deliveries are Loading...</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="select_profile_image">Select Profile Image</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>