<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/reportFragment">

    <fragment
        android:id="@+id/deliveryFragment"
        android:name="ie.wit.presentdeliverytracker.ui.delivery.DeliveryFragment"
        android:label="@string/action_main"
        tools:layout="@layout/fragment_delivery" >
        <action
            android:id="@+id/action_deliveryFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="ie.wit.presentdeliverytracker.ui.report.ReportFragment"
        android:label="@string/action_report"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_reportFragment_to_deliveryFragment"
            app:destination="@id/deliveryFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_reportFragment_to_deliveryDetailFragment"
            app:destination="@id/deliveryDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.wit.presentdeliverytracker.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/deliveryDetailFragment"
        android:name="ie.wit.presentdeliverytracker.ui.detail.DeliveryDetailFragment"
        android:label="Delivery Detail"
        tools:layout="@layout/fragment_delivery_detail" >
        <action
            android:id="@+id/action_deliveryDetailFragment_to_deliveryFragment"
            app:destination="@id/reportFragment" />
        <argument
            android:name="deliveryid"
            app:argType="string" />
    </fragment>
</navigation>